Wed Jun 06 10:39:23 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/api_matchspy.cc: Use a cached generated database for matchspy2
	  and matchspy4.

Wed Jun 06 10:37:03 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* weight/bm25weight.cc: Avoid use of undefined values when k1 or b are
	  zero.

Wed Jun 06 10:33:11 GMT 2012  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* weight/bm25weight.cc: Fix use of uninitialised value found by new
	  bm25weight4 testcase.
	* tests/api_weight.cc: Add tests for BM25 parameter combinations where
	  doclen shouldn't affect the weights.

Wed Jun 06 10:25:35 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/.gitignore,tests/Makefile.am,tests/api_weight.cc: Add test
	  coverage for exception thrown if BM25Weight or TradWeight
	  unserialise() fails.

Wed Jun 06 10:07:44 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/weight.h,weight/weight.cc: We were failing to call
	  init() for Weight objects providing the term-independent weight.
	  These now get called with init(0.0).

Wed Jun 06 09:39:21 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/weight.h: Remove duplicate "need_stat(WDF);" calls,
	  accidentally added by merge of opsynonym branch in r12609.

Tue Jun 05 13:04:57 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* weight/tradweight.cc: BM25Weight -> TradWeight in exception message.

Tue Jun 05 12:43:46 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/harness/testutils.cc,tests/harness/testutils.h: Remove unused
	  test helper mset_range_is_same_percents() (thanks, lcov!)

Tue Jun 05 12:34:15 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac,tests/runsrv.in: In the testsuite, only run remote
	  servers under valgrind if x87 FP instructions are in use.
